# calcprimelist-cpp

./: CMakeLists.txt  README.md  README_ENG.md  files.txt  uncrustify.cfg
.github/workflows/: generate-1e12.yml  release.yml  release_v1.1.yml  release_v2.yml  release_v3.0.yml
include/: base_sieve.h  bucket.h  cpu_info.h  marker.h  popcnt.h  prime_count.h  segmenter.h  wheel.h  wheel_bitmap_count.h  writer.h
include/calcprime/: api.h
src/: api.cpp  base_sieve.cpp  bucket.cpp  cpu_info.cpp  main.cpp  marker.cpp  popcnt.cpp  prime_count.cpp  segmenter.cpp  wheel.cpp  wheel_bitmap_count.cpp  writer.cpp
